web/KubernetesManifests/ebookshop-ns.yaml
# ebookshop-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebookshop
