web/KubernetesManifests/EBservice.yaml
# springboot-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebookshop-app-service
  namespace: ebookshop
spec:
  selector:
    app: ebookshop-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
