web/KubernetesManifests/EBingress.yaml
# springboot-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebookshop-app-ingress
  namespace: ebookshop
spec:
  rules:
    - host: ebookshop.example.com  # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ebookshop-app-service
                port:
                  number: 8080
